samples: Switch from eglibc to glibc for all microblaze linux
Signed-off-by: David Holsgrove <david.holsgrove@xilinx.com>

--- a/samples/microblazeel-xilinx-linux-gnu/crosstool.config
+++ b/samples/microblazeel-xilinx-linux-gnu/crosstool.config
@@ -31,7 +31,8 @@ CT_CC_EXTRA_CONFIG_ARRAY="--enable-symvers=gnu"
 # CT_CC_GCC_USE_LTO is not set
 CT_CC_GCC_LIBSSP=y
 CT_CC_GCC_DISABLE_PCH=y
-CT_LIBC_EGLIBC_CUSTOM=y
+CT_LIBC_glibc=y
+CT_LIBC_GLIBC_CUSTOM=y
 CT_LIBC_ENABLE_FORTIFIED_BUILD=y
 CT_LIBC_GLIBC_USE_PORTS=y
 CT_LIBC_GLIBC_KERNEL_VERSION_NONE=y
