Samples: microblaze(el) linux single lib, preset CFLAGS
Build microblaze(el) linux toolchains without
multi-lib, and the default libs should have CFLAGS set
to match Low End Linux profile in XPS

Signed-off-by: David Holsgrove <david.holsgrove@xilinx.com>

--- a/samples/microblaze-xilinx-linux-gnu/crosstool.config
+++ b/samples/microblaze-xilinx-linux-gnu/crosstool.config
@@ -13,8 +13,8 @@ CT_PREFIX_DIR="${CT_TOP_DIR}/../tool-build"
 CT_PATCH_NONE=y
 CT_LOG_EXTRA=y
 CT_LOG_PROGRESS_BAR=n
+CT_TARGET_CFLAGS="-mxl-barrel-shift -mno-xl-soft-mul -mxl-pattern-compare -mxl-reorder -mcpu=v8.30.a"
 CT_ARCH_microblaze=y
-CT_MULTILIB=y
 CT_SYSROOT_NAME="sys-root"
 CT_TARGET_VENDOR="xilinx"
 CT_KERNEL_linux=y
@@ -32,6 +32,7 @@ CT_CC_GCC_LIBSSP=y
 CT_CC_GCC_DISABLE_PCH=y
 CT_LIBC_glibc=y
 CT_LIBC_GLIBC_CUSTOM=y
+CT_LIBC_GLIBC_EXTRA_CFLAGS="-mxl-barrel-shift -mno-xl-soft-mul -mxl-pattern-compare -mxl-reorder -mcpu=v8.30.a"
 CT_LIBC_ENABLE_FORTIFIED_BUILD=y
 CT_LIBC_GLIBC_USE_PORTS=y
 CT_LIBC_GLIBC_KERNEL_VERSION_NONE=y
