--- a/samples/x86_64-w64-mingw32,microblaze-xilinx-elf/crosstool.config
+++ b/samples/x86_64-w64-mingw32,microblaze-xilinx-elf/crosstool.config
@@ -25,7 +25,6 @@ CT_BINUTILS_CUSTOM=y
 CT_CC_CUSTOM=y
 CT_CC_LANG_CXX=y
 # CT_CC_STATIC_LIBSTDCXX is not set
-CT_CC_GCC_SYSTEM_ZLIB=y
 # CT_CC_GCC_USE_GRAPHITE is not set
 # CT_CC_GCC_USE_LTO is not set
 CT_CC_GCC_DISABLE_PCH=y
@@ -38,6 +37,7 @@ CT_LIBC_NEWLIB_IO_LDBL=y
 # CT_LIBC_NEWLIB_ENABLE_TARGET_OPTSPACE is not set
 CT_DEBUG_gdb=y
 # CT_GDB_CROSS_PYTHON is not set
+CT_GDB_CROSS_EXTRA_CONFIG_ARRAY="--disable-expat --with-expat=no"
 CT_GDB_CUSTOM=y
 CT_GMP_V_5_0_1=y
 CT_MPFR_V_3_0_1=y
