Revert "Microblaze has moved into glibc libc proper and is no longer a port"
This reverts commit 5f2db00fd22764df7be27b33c1f3d3a7df6b503a.

Moving MicroBlaze from ports to libc proper is currently on glibc head,
but not on the 2.19 release branch. Revert change until glibc 2.20
release, and continue to use --enable-ports to allow building MicroBlaze

--- a/samples/microblazeel-xilinx-linux-gnu/crosstool.config
+++ b/samples/microblazeel-xilinx-linux-gnu/crosstool.config
@@ -35,6 +35,7 @@ CT_LIBC_glibc=y
 CT_LIBC_GLIBC_CUSTOM=y
 CT_LIBC_GLIBC_EXTRA_CFLAGS="-mxl-barrel-shift -mno-xl-soft-mul -mxl-pattern-compare -mxl-reorder -mcpu=v8.30.a"
 CT_LIBC_ENABLE_FORTIFIED_BUILD=y
+CT_LIBC_GLIBC_USE_PORTS=y
 CT_LIBC_GLIBC_KERNEL_VERSION_NONE=y
 CT_DEBUG_gdb=y
 # CT_GDB_CROSS_PYTHON is not set
